<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ziacik.PridajSlovicka" >

    <ListView
        android:id="@+id/Slovicka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PridatSlovicka"
        android:layout_below="@+id/PridatSlovicka"
        android:layout_marginTop="16dp"
        tools:listitem="@android:layout/simple_list_item_2" />

    <Spinner
        android:id="@+id/Kategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/instrukcia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Kategorie"
        android:text="@string/instrukcia_slovicka" />

    <EditText
        android:id="@+id/Anglicky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MenoKategorie"
        android:layout_below="@+id/instrukcia"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/anglicky"
        android:inputType="text" />

    <EditText
        android:id="@+id/SlovenskyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Anglicky"
        android:layout_alignBottom="@+id/Anglicky"
        android:layout_alignRight="@+id/instrukcia"
        android:ems="10"
        android:hint="@string/slovensky"
        android:inputType="text" />

    <EditText
        android:id="@+id/MenoKategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Anglicky"
        android:layout_alignBottom="@+id/Anglicky"
        android:layout_alignLeft="@+id/Kategorie"
        android:ems="10"
        android:hint="@string/meno_suboru"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/VybratKategoriu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:onClick="vybrat"
        android:text="@string/vybrat" />

    <Button
        android:id="@+id/PridatSlovicka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anglicky"
        android:layout_below="@+id/Anglicky"
        android:layout_marginTop="51dp"
        android:onClick="save"
        android:text="@string/enter" />

    <EditText
        android:id="@+id/HelpEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Anglicky"
        android:layout_below="@+id/Anglicky"
        android:ems="10"
        android:hint="@string/napoveda" />

</RelativeLayout>