<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ziacik.Anglictina" >

        <EditText
            android:id="@+id/Vysledok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Word"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/preklad"
            android:visibility="invisible" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Vysledok"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/enter"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Uprav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="51dp"
        android:layout_marginTop="12dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/Word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Uprav"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/krat"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/Subory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Uprav"
        android:layout_marginLeft="11dp"
        android:layout_toRightOf="@+id/Uprav" />

    <TextView
        android:id="@+id/TimerAndCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Uprav"
        android:layout_below="@+id/Subory"
        android:layout_marginTop="13dp"
        android:text="@string/krat"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <Button
        android:id="@+id/Pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Subory"
        android:layout_alignParentRight="true"
        android:layout_marginRight="12dp"
        android:text="@string/pauza"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/tick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Enter"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/Enter"
        android:src="@drawable/tick"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tick"
        android:layout_alignTop="@+id/tick"
        android:src="@drawable/wrong"
        android:visibility="invisible" />

</RelativeLayout>
